fixed some warning issues and firebase issues

--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,21 @@
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [],
+            "allowedCommonJsDependencies": [
+              "lodash",
+              "firebase",
+              "@angular/common/locales/fr",
+              "lodash/dropRight",
+              "@firebase/app",
+              "firebase/app",
+              "@firebase/database",
+              "@firebase/firestore",
+              "@firebase/functions",
+              "@firebase/auth",
+              "@firebase/performance",
+              "@firebase/remote-config"
+          ]
           },
           "configurations": {
             "production": {
