added google Oauth and clean up some routes

--- a/angular.json
+++ b/angular.json
@@ -40,6 +40,7 @@
               "@firebase/firestore",
               "@firebase/functions",
               "@firebase/auth",
+              "@angular/fire/firestore",
               "@firebase/performance",
               "@firebase/remote-config"
           ]
