--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "angular-google-charts": "^1.1.6",
     "bootstrap": "^4.5.0",
     "firebase": "^7.23.0",
     "rxjs": "~6.5.5",
